Add extra stylesheet

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -1,5 +1,5 @@
 [data-md-color-scheme="branding"] {
   --md-primary-fg-color:        #B5B5CF;
   --md-primary-fg-color--light: #B5AE9B;
-  /* --md-primary-fg-color--dark:  #90030C; */
+  --md-primary-fg-color--dark:  #90030C;
 }
